oxd_preda/transpiler/antlr_generated/PredaParser.cpp

// Generated from Preda.g4 by ANTLR 4.9.3


#include "PredaListener.h"
#include "PredaVisitor.h"

#include "PredaParser.h"


using namespace antlrcpp;
using namespace antlr4;

PredaParser::PredaParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

PredaParser::~PredaParser() {
  delete _interpreter;
}

std::string PredaParser::getGrammarFileName() const {
  return "Preda.g4";
}

const std::vector<std::string>& PredaParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& PredaParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- PredaSourceContext ------------------------------------------------------------------

PredaParser::PredaSourceContext::PredaSourceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PredaParser::ContractDefinitionContext* PredaParser::PredaSourceContext::contractDefinition() {
  return getRuleContext<PredaParser::ContractDefinitionContext>(0);
}

tree::TerminalNode* PredaParser::PredaSourceContext::EOF() {
  return getToken(PredaParser::EOF, 0);
}

std::vector<PredaParser::DirectiveContext *> PredaParser::PredaSourceContext::directive() {
  return getRuleContexts<PredaParser::DirectiveContext>();
}

PredaParser::DirectiveContext* PredaParser::PredaSourceContext::directive(size_t i) {
  return getRuleContext<PredaParser::DirectiveContext>(i);
}


size_t PredaParser::PredaSourceContext::getRuleIndex() const {
  return PredaParser::RulePredaSource;
}

void PredaParser::PredaSourceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPredaSource(this);
}

void PredaParser::PredaSourceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPredaSource(this);
}


antlrcpp::Any PredaParser::PredaSourceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PredaVisitor*>(visitor))
    return parserVisitor->visitPredaSource(this);
  else
    return visitor->visitChildren(this);
}

PredaParser::PredaSourceContext* PredaParser::predaSource() {
  PredaSourceContext *_localctx = _tracker.createInstance<PredaSourceContext>(_ctx, getState());
  enterRule(_localctx, 0, PredaParser::RulePredaSource);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PredaParser::ImportKeyword) {
      setState(110);
      directive();
      setState(115);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(116);
    contractDefinition();
    setState(117);
    match(PredaParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DirectiveContext ------------------------------------------------------------------

PredaParser::DirectiveContext::DirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PredaParser::ImportDirectiveContext* PredaParser::DirectiveContext::importDirective() {
  return getRuleContext<PredaParser::ImportDirectiveContext>(0);
}


size_t PredaParser::DirectiveContext::getRuleIndex() const {
  return PredaParser::RuleDirective;
}

void PredaParser::DirectiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDirective(this);
}

void PredaParser::DirectiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDirective(this);
}


antlrcpp::Any PredaParser::DirectiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PredaVisitor*>(visitor))
    return parserVisitor->visitDirective(this);
  else
    return visitor->visitChildren(this);
}

PredaParser::DirectiveContext* PredaParser::directive() {
  DirectiveContext *_localctx = _tracker.createInstance<DirectiveContext>(_ctx, getState());
  enterRule(_localctx, 2, PredaParser::RuleDirective);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    importDirective();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportDirectiveContext ------------------------------------------------------------------

PredaParser::ImportDirectiveContext::ImportDirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PredaParser::ImportDirectiveContext::ImportKeyword() {
  return getToken(PredaParser::ImportKeyword, 0);
}

std::vector<PredaParser::IdentifierContext *> PredaParser::ImportDirectiveContext::identifier() {
  return getRuleContexts<PredaParser::IdentifierContext>();
}

PredaParser::IdentifierContext* PredaParser::ImportDirectiveContext::identifier(size_t i) {
  return getRuleContext<PredaParser::IdentifierContext>(i);
}

tree::TerminalNode* PredaParser::ImportDirectiveContext::AsKeyword() {
  return getToken(PredaParser::AsKeyword, 0);
}


size_t PredaParser::ImportDirectiveContext::getRuleIndex() const {
  return PredaParser::RuleImportDirective;
}

void PredaParser::ImportDirectiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportDirective(this);
}

void PredaParser::ImportDirectiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportDirective(this);
}


antlrcpp::Any PredaParser::ImportDirectiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PredaVisitor*>(visitor))
    return parserVisitor->visitImportDirective(this);
  else
    return visitor->visitChildren(this);
}

PredaParser::ImportDirectiveContext* PredaParser::importDirective() {
  ImportDirectiveContext *_localctx = _tracker.createInstance<ImportDirectiveContext>(_ctx, getState());
  enterRule(_localctx, 4, PredaParser::RuleImportDirective);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    match(PredaParser::ImportKeyword);
    setState(125);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(122);
      antlrcpp::downCast<ImportDirectiveContext *>(_localctx)->dAppName = identifier();
      setState(123);
      match(PredaParser::T__0);
      break;
    }

    default:
      break;
    }
    setState(127);
    antlrcpp::downCast<ImportDirectiveContext *>(_localctx)->contractName = identifier();
    setState(130);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PredaParser::AsKeyword) {
      setState(128);
      match(PredaParser::AsKeyword);
      setState(129);
      antlrcpp::downCast<ImportDirectiveContext *>(_localctx)->alias = identifier();
    }
    setState(132);
    match(PredaParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AnnotationContext ------------------------------------------------------------------

PredaParser::AnnotationContext::AnnotationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PredaParser::AnnotationItemContext *> PredaParser::AnnotationContext::annotationItem() {
  return getRuleContexts<PredaParser::AnnotationItemContext>();
}

PredaParser::AnnotationItemContext* PredaParser::AnnotationContext::annotationItem(size_t i) {
  return getRuleContext<PredaParser::AnnotationItemContext>(i);
}


size_t PredaParser::AnnotationContext::getRuleIndex() const {
  return PredaParser::RuleAnnotation;
}

void PredaParser::AnnotationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAnnotation(this);
}

void PredaParser::AnnotationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAnnotation(this);
}


antlrcpp::Any PredaParser::AnnotationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PredaVisitor*>(visitor))
    return parserVisitor->visitAnnotation(this);
  else
    return visitor->visitChildren(this);
}

PredaParser::AnnotationContext* PredaParser::annotation() {
  AnnotationContext *_localctx = _tracker.createInstance<AnnotationContext>(_ctx, getState());
  enterRule(_localctx, 6, PredaParser::RuleAnnotation);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    match(PredaParser::T__2);
    setState(136);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PredaParser::Identifier) {
      setState(135);
      annotationItem();
    }
    setState(142);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PredaParser::T__3) {
      setState(138);
      match(PredaParser::T__3);
      setState(139);
      annotationItem();
      setState(144);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(145);
    match(PredaParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AnnotationItemContext ------------------------------------------------------------------

PredaParser::AnnotationItemContext::AnnotationItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PredaParser::IdentifierContext* PredaParser::AnnotationItemContext::identifier() {
  return getRuleContext<PredaParser::IdentifierContext>(0);
}

tree::TerminalNode* PredaParser::AnnotationItemContext::BooleanLiteral() {
  return getToken(PredaParser::BooleanLiteral, 0);
}

tree::TerminalNode* PredaParser::AnnotationItemContext::DecimalIntegerLiteral() {
  return getToken(PredaParser::DecimalIntegerLiteral, 0);
}

tree::TerminalNode* PredaParser::AnnotationItemContext::DecimalFloatLiteral() {
  return getToken(PredaParser::DecimalFloatLiteral, 0);
}

tree::TerminalNode* PredaParser::AnnotationItemContext::HexIntegerLiteral() {
  return getToken(PredaParser::HexIntegerLiteral, 0);
}

tree::TerminalNode* PredaParser::AnnotationItemContext::StringLiteral() {
  return getToken(PredaParser::StringLiteral, 0);
}


size_t PredaParser::AnnotationItemContext::getRuleIndex() const {
  return PredaParser::RuleAnnotationItem;
}

void PredaParser::AnnotationItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAnnotationItem(this);
}

void PredaParser::AnnotationItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAnnotationItem(this);
}


antlrcpp::Any PredaParser::AnnotationItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PredaVisitor*>(visitor))
    return parserVisitor->visitAnnotationItem(this);
  else
    return visitor->visitChildren(this);
}

PredaParser::AnnotationItemContext* PredaParser::annotationItem() {
  AnnotationItemContext *_localctx = _tracker.createInstance<AnnotationItemContext>(_ctx, getState());
  enterRule(_localctx, 8, PredaParser::RuleAnnotationItem);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(147);
    identifier();
    setState(148);
    match(PredaParser::T__5);
    setState(149);
    _la = _input->LA(1);
    if (!(((((_la - 89) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 89)) & ((1ULL << (PredaParser::BooleanLiteral - 89))
      | (1ULL << (PredaParser::DecimalFloatLiteral - 89))
      | (1ULL << (PredaParser::DecimalIntegerLiteral - 89))
      | (1ULL << (PredaParser::HexIntegerLiteral - 89))
      | (1ULL << (PredaParser::StringLiteral - 89)))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DoxygenContext ------------------------------------------------------------------

PredaParser::DoxygenContext::DoxygenContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> PredaParser::DoxygenContext::DoxygenSingle() {
  return getTokens(PredaParser::DoxygenSingle);
}

tree::TerminalNode* PredaParser::DoxygenContext::DoxygenSingle(size_t i) {
  return getToken(PredaParser::DoxygenSingle, i);
}

tree::TerminalNode* PredaParser::DoxygenContext::DoxygenMulti() {
  return getToken(PredaParser::DoxygenMulti, 0);
}


size_t PredaParser::DoxygenContext::getRuleIndex() const {
  return PredaParser::RuleDoxygen;
}

void PredaParser::DoxygenContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDoxygen(this);
}

void PredaParser::DoxygenContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDoxygen(this);
}


antlrcpp::Any PredaParser::DoxygenContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PredaVisitor*>(visitor))
    return parserVisitor->visitDoxygen(this);
  else
    return visitor->visitChildren(this);
}

PredaParser::DoxygenContext* PredaParser::doxygen() {
  DoxygenContext *_localctx = _tracker.createInstance<DoxygenContext>(_ctx, getState());
  enterRule(_localctx, 10, PredaParser::RuleDoxygen);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(157);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PredaParser::DoxygenSingle: {
        enterOuterAlt(_localctx, 1);
        setState(152); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(151);
          match(PredaParser::DoxygenSingle);
          setState(154); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == PredaParser::DoxygenSingle);
        break;
      }

      case PredaParser::DoxygenMulti: {
        enterOuterAlt(_localctx, 2);
        setState(156);
        match(PredaParser::DoxygenMulti);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ContractDefinitionContext ------------------------------------------------------------------

PredaParser::ContractDefinitionContext::ContractDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PredaParser::ContractDefinitionContext::ContractKeyword() {
  return getToken(PredaParser::ContractKeyword, 0);
}

PredaParser::IdentifierContext* PredaParser::ContractDefinitionContext::identifier() {
  return getRuleContext<PredaParser::IdentifierContext>(0);
}

PredaParser::DoxygenContext* PredaParser::ContractDefinitionContext::doxygen() {
  return getRuleContext<PredaParser::DoxygenContext>(0);
}

PredaParser::AnnotationContext* PredaParser::ContractDefinitionContext::annotation() {
  return getRuleContext<PredaParser::AnnotationContext>(0);
}

tree::TerminalNode* PredaParser::ContractDefinitionContext::ImplementsKeyword() {
  return getToken(PredaParser::ImplementsKeyword, 0);
}

std::vector<PredaParser::InterfaceRefContext *> PredaParser::ContractDefinitionContext::interfaceRef() {
  return getRuleContexts<PredaParser::InterfaceRefContext>();
}

PredaParser::InterfaceRefContext* PredaParser::ContractDefinitionContext::interfaceRef(size_t i) {
  return getRuleContext<PredaParser::InterfaceRefContext>(i);
}

std::vector<PredaParser::ContractPartContext *> PredaParser::ContractDefinitionContext::contractPart() {
  return getRuleContexts<PredaParser::ContractPartContext>();
}

PredaParser::ContractPartContext* PredaParser::ContractDefinitionContext::contractPart(size_t i) {
  return getRuleContext<PredaParser::ContractPartContext>(i);
}


size_t PredaParser::ContractDefinitionContext::getRuleIndex() const {
  return PredaParser::RuleContractDefinition;
}

void PredaParser::ContractDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterContractDefinition(this);
}

void PredaParser::ContractDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitContractDefinition(this);
}


antlrcpp::Any PredaParser::ContractDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PredaVisitor*>(visitor))
    return parserVisitor->visitContractDefinition(this);
  else
    return visitor->visitChildren(this);
}

PredaParser::ContractDefinitionContext* PredaParser::contractDefinition() {
  ContractDefinitionContext *_localctx = _tracker.createInstance<ContractDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 12, PredaParser::RuleContractDefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(160);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PredaParser::DoxygenSingle

    || _la == PredaParser::DoxygenMulti) {
      setState(159);
      doxygen();
    }
    setState(163);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PredaParser::T__2) {
      setState(162);
      annotation();
    }
    setState(165);
    match(PredaParser::ContractKeyword);
    setState(166);
    identifier();
    setState(176);
    _errHandler->sync(this);
